--- a/src/components/data-table/_data-table-action.scss
+++ b/src/components/data-table/_data-table-action.scss
@@ -9,7 +9,7 @@
 @import '../../globals/scss/vendor/@carbon/elements/scss/import-once/import-once';
 @import '../../globals/scss/vars';
 
-@include exports('data-table-v2-action') {
+@include exports('data-table-action') {
   .#{$prefix}--table-toolbar {
     display: flex;
     padding-top: $spacing-xs;
