--- a/src/components/data-table/_data-table-inline-edit.scss
+++ b/src/components/data-table/_data-table-inline-edit.scss
@@ -9,7 +9,7 @@
 @import '../../globals/scss/vendor/@carbon/elements/scss/import-once/import-once';
 @import '../../globals/scss/vars';
 
-@include exports('data-table-v2-inline-edit') {
+@include exports('data-table-inline-edit') {
   .#{$prefix}--inline-edit-label {
     display: flex;
     justify-content: space-between;
@@ -62,7 +62,7 @@
     }
   }
 
-  .#{$prefix}--data-table-v2--short {
+  .#{$prefix}--data-table--short {
     input {
       height: rem(32px);
     }
