--- a/packages/components/src/components/button/_button.scss
+++ b/packages/components/src/components/button/_button.scss
@@ -234,13 +234,16 @@
   }
 
   .#{$prefix}--btn--sm {
-    min-height: rem(32px);
+    // min-height: rem(32px);
+    min-height: $container-02;
     padding: $button-padding-sm;
   }
 
   .#{$prefix}--btn--field {
-    height: 40px;
-    min-height: 40px;
+    // height: 40px;
+    // min-height: 40px;
+    height: $container-03;
+    min-height: $container-03;
     padding: $button-padding-field;
   }
 
