--- a/packages/components/src/globals/scss/_theme-tokens.scss
+++ b/packages/components/src/globals/scss/_theme-tokens.scss
@@ -11,6 +11,12 @@
 @import 'spacing';
 @import './vendor/@carbon/elements/scss/themes/themes';
 
+// TODO
+$base-font-size: 16px !default;
+@function rem($px) {
+  @return ($px / $base-font-size) * 1rem;
+}
+
 // The load order of tokens versus themes matter, so we use `carbon--theme` here
 // to make sure that they're in sync if one has diverged from the other.
 @include carbon--theme();
@@ -85,25 +91,62 @@ $button-font-size: 0.875rem !default;
 /// @group button
 $button-border-radius: 0 !default;
 
+@function get-container-padding($container, $token, $border-size: 0) {
+  // TODO no token
+  $line-height: map-get(map-get($carbon--theme, $token), 'line-height');
+
+  // TODO no $line-height
+
+  @if feature-flag-enabled('enable-css-custom-properties') {
+    $line-height: var(--cds-#{$token}-line-height, $line-height);
+    @return calc(
+      (#{$container} - #{$line-height} - #{rem($border-size * 2)}) / 2
+    );
+  } @else {
+    @return ($container - $line-height - (rem($border-size) * 2)) / 2;
+  }
+}
+
 /// @type Number
 /// @access public
 /// @group button
-$button-height: 48px !default;
+// $button-height: ($container-04 / 1rem) * 16px !default;
+$button-height: $container-04 !default;
+
+$button-container-padding: get-container-padding(
+  $container: $container-04,
+  $token: 'body-short-01',
+  $border-size: 3px,
+);
 
 /// @type Value
 /// @access public
 /// @group button
-$button-padding: calc(0.875rem - 3px) 60px calc(0.875rem - 3px) 12px !default;
+$button-padding: $button-container-padding rem(60px) $button-container-padding
+  // We want 16px padding on left hand size but border takes up 3px
+  rem(16px - 3px) !default;
 
 /// @type Value
 /// @access public
 /// @group button
-$button-padding-field: calc(0.675rem - 3px) 60px calc(0.675rem - 3px) 12px !default;
+$button-container-padding-field: get-container-padding(
+  $container-03,
+  'body-short-01',
+  3px
+);
+$button-padding-field: $button-container-padding-field 60px
+  $button-container-padding-field rem(16px - 3px) !default;
 
 /// @type Value
 /// @access public
 /// @group button
-$button-padding-sm: calc(0.375rem - 3px) 60px calc(0.375rem - 3px) 12px !default;
+$button-container-padding-sm: get-container-padding(
+  $container-02,
+  'body-short-01',
+  3px
+);
+$button-padding-sm: $button-container-padding-sm 60px
+  $button-container-padding-sm rem(16px - 3px) !default;
 
 /// @type Number
 /// @access public
