chore: check-in work

--- a/packages/components/index.scss
+++ b/packages/components/index.scss
@@ -1,1 +1,4 @@
-// @use './src/components/accordion';
+@use './next-scss/components/accordion';
+@use './next-scss/components/breadcrumb';
+@use './next-scss/components/button';
+@use './next-scss/components/link';
